<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/device_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/connection_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disconnected"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/device_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_mac"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/device_mtu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/device_mtu"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/mtu_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="N/A"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/menu_option"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:text="@string/menu"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.v7.widget.CardView>