<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ssid_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssid_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rssi_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/rssi_value"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bssid_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bssid"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/network_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="N/A"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>